--- a/source/themes/custom/crescenttool/styles/abstracts/variables/_colors.scss
+++ b/source/themes/custom/crescenttool/styles/abstracts/variables/_colors.scss
@@ -13,44 +13,46 @@ $color-black: #000000;
 $color-blue: #0080FF;
 $color-dark-blue: #0055A9;
 
-// Primary - Molten Orange
-$primary-orange: #EB8900;
-$primary-dark: #BB720B;
-$primary-light: #FDBB5E;
+// Primary - Red
+$primary-red: #CA3604;
+$primary-dark: #A02A03;
+$primary-dark2: #8C2503;
+$primary-light: #DF663D;
 
 // Secondary
-$secondary-black: #1D201F;
-$secondary-light: #BCBCBE;
+$secondary-black: #272525;
+$secondary-light: #3C3C3E;
 
 // Status Colors
-$success-green: #28A745;
-$danger-red: #F64728;
-$warning-yellow: #FFC107;
-$info-blue: #3480EA;
+$success-green: #9BC53D;
+$danger-red: #F16F43;
+$warning-yellow: #FDE74C;
+$info-blue: #5BC0EB;
 
 // Grays
-$gray-10: #F4F5F5;
-$gray-20: #E9ECEB;
-$gray-30: #D4D8D7;
-$gray-40: #B4BBB9;
-$gray-50: #949E9B;
-$gray-60: #7E8B87;
-$gray-70: #616B68;
-$gray-80: #444B49;
-$gray-90: #303634;
+$gray-10: #F5F4F4;
+$gray-20: #E1DFDF;
+$gray-30: #D7D5D5;
+$gray-40: #CECACA;
+$gray-50: #B0ABAB;
+$gray-60: #9C9696;
+$gray-70: #7E7777;
+$gray-80: #5F5959;
+$gray-90: #3F3B3B;
 
 // Black & White
 $white: #FFFFFF;
 $black: #000000;
 
 // Typography
-$type-dark: #1D201F;
-$type-light: #D4D8D7;
+$type-dark: #272525;
+$type-light: #FFFFFF;
 
 
 $colors: (
-  'primary': $primary-orange,
+  'primary': $primary-red,
   'primary-dark': $primary-dark,
+  'primary-dark2': $primary-dark2,
   'primary-light': $primary-light,
   'secondary-black': $secondary-black,
   'secondary-light': $secondary-light,
