--- a/source/themes/custom/crescenttool/styles/base/_inputs.scss
+++ b/source/themes/custom/crescenttool/styles/base/_inputs.scss
@@ -231,7 +231,7 @@ $active-gap: 8px; // the math likes px values
   // fake input box active indicator
   input[type='radio']:checked + label:after,
   input[type='radio']:not(:checked) + label:after {
-    background: $primary-orange;
+    background: $primary-red;
     border-radius: 100%;
     content: '';
     height: calc(#{$active-width} - #{$active-gap});
