--- a/source/themes/custom/crescenttool/styles/libraries/node/teaser--product.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/teaser--product.scss
@@ -45,7 +45,7 @@
 
         @include media('<md') {
           .media {
-            outline: 2px solid $primary-orange;
+            outline: 2px solid $primary-red;
             outline-offset: -2px;
           }
         }
@@ -95,7 +95,7 @@
 
       &:hover,
       &:focus {
-        color: $primary-orange;
+        color: $primary-red;
         background-color: $black;
       }
     }
