--- a/source/themes/custom/crescenttool/styles/libraries/node/tile--product-listing.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/tile--product-listing.scss
@@ -45,7 +45,7 @@
 
       .node__product-listing-grid-image,
       .node__product-listing-grid-title {
-        box-shadow: 0 0 0 2px $primary-orange;
+        box-shadow: 0 0 0 2px $primary-red;
         @include media('<md') {
           box-shadow: none;
         }
@@ -53,7 +53,7 @@
 
       .node__product-listing-grid-title {
         @include icon('chevron-right-black', after, false);
-        background-color: $primary-orange;
+        background-color: $primary-red;
         color: $black;
 
         &::after {
