--- a/source/themes/custom/crescenttool/styles/libraries/paragraph/full--content-callout.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/paragraph/full--content-callout.scss
@@ -53,10 +53,10 @@
 
         .field--name-field-link a {
           @include btn(secondary);
-          color: $primary-orange;
+          color: $primary-red;
           font-weight: $fw-extra-bold;
           font-size: rem(24px);
-          border: 1px solid $primary-orange;
+          border: 1px solid $primary-red;
           background-color: $black;
           display: inline-flex;
           justify-content: center;
@@ -66,7 +66,7 @@
           &:hover {
             color: $black;
             border-color: $black;
-            background-color: $primary-orange;
+            background-color: $primary-red;
           }
 
           @include media('<sm') {
