--- a/source/themes/custom/crescenttool/styles/libraries/paragraph/full--steps.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/paragraph/full--steps.scss
@@ -151,7 +151,7 @@
 
       &::after {
         height: 95%;
-        border-left: 2px dashed $primary-orange;
+        border-left: 2px dashed $primary-red;
       }
     }
 
@@ -162,7 +162,7 @@
         top: 50%;
         left: -31%;
         width: 98%;
-        border-top: 2px dashed $primary-orange;
+        border-top: 2px dashed $primary-red;
       }
     }
   }
@@ -173,7 +173,7 @@
     font-family: $font-brand;
     font-size: rem(16px);
     font-weight: 800;
-    background-color: $primary-orange;
+    background-color: $primary-red;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -183,7 +183,7 @@
 
     &::after {
       content: '';
-      background-color: $primary-orange;
+      background-color: $primary-red;
       position: absolute;
       top: 0;
       right: rem(-8px);
