--- a/source/themes/custom/crescenttool/styles/libraries/region/header.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/region/header.scss
@@ -32,7 +32,7 @@ $mobile-menu-item-button-height: 7rem;
 .region-header {
   @include container-full-width();
 
-  background-color: $primary-orange;
+  background-color: $primary-red;
   left: 0;
   max-width: none;
   position: fixed;
@@ -43,7 +43,7 @@ $mobile-menu-item-button-height: 7rem;
   z-index: $header-z-index;
 
   &::after {
-    background-color: $primary-orange;
+    background-color: $primary-red;
     content: '';
     display: block;
     height: 1px;
@@ -282,7 +282,7 @@ $mobile-menu-item-button-height: 7rem;
 
     .menu-item__panel {
       display: block;
-      background-color: $primary-orange;
+      background-color: $primary-red;
     }
 
     .menu-item__button[aria-expanded='true'] .menu-item__button-collapse,
@@ -336,7 +336,7 @@ $mobile-menu-item-button-height: 7rem;
         width: 100%;
 
         h5 {
-          color: $primary-orange;
+          color: $primary-red;
           margin: 0;
           padding: 0;
         }
@@ -344,7 +344,7 @@ $mobile-menu-item-button-height: 7rem;
 
       li,
       li a {
-        color: $primary-orange;
+        color: $primary-red;
       }
 
     }
@@ -646,7 +646,7 @@ $mobile-menu-item-button-height: 7rem;
         z-index: 1;
 
         &::before {
-          background-color: $primary-orange;
+          background-color: $primary-red;
           position: absolute;
           content: '';
           width: 200vw;
@@ -845,7 +845,7 @@ $mobile-menu-item-button-height: 7rem;
       }
 
       .block__menu {
-        background-color: $primary-orange;
+        background-color: $primary-red;
         animation-delay: 300ms;
         animation-duration: 300ms;
         animation-fill-mode: both;
