--- a/source/themes/custom/crescenttool/styles/abstracts/mixins/_typography.scss
+++ b/source/themes/custom/crescenttool/styles/abstracts/mixins/_typography.scss
@@ -44,7 +44,7 @@
   @if $color == light {
     color: $color-white;
   } @else if $color == dark {
-    color: $primary-orange;
+    color: $primary-red;
   } @else if $color == black {
     color: $black;
   }
