--- a/source/themes/custom/crescenttool/styles/libraries/paragraph/full--product-slider.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/paragraph/full--product-slider.scss
@@ -57,9 +57,9 @@
     }
 
     .component-product-slider__button {
-      background-color: $primary-orange;
+      background-color: $primary-red;
       background-size: rem(10px) rem(16px);
-      border: 1px solid $primary-orange;
+      border: 1px solid $primary-red;
       height: rem(48px);
       width: rem(48px);
       margin: 0;
@@ -68,7 +68,7 @@
 
       &:hover {
         background-color: $color-black;
-        border-color: $primary-orange;
+        border-color: $primary-red;
       }
 
       &.component-product-slider__button-prev {
@@ -120,11 +120,11 @@
     width: 100%;
 
     .component-product-slider__button {
-      background-color: $primary-orange;
+      background-color: $primary-red;
       background-position: center;
       background-repeat: no-repeat;
       background-size: rem(10px) rem(16px);
-      border: 1px solid $primary-orange;
+      border: 1px solid $primary-red;
       display: none;
       height: rem(48px);
       width: rem(48px);
@@ -158,11 +158,11 @@
 
       .swiper-pagination-bullet {
         background: transparent;
-        border-color: $primary-orange;
+        border-color: $primary-red;
       }
 
       .swiper-pagination-bullet-active {
-        background: $primary-orange;
+        background: $primary-red;
       }
     }
   }
