--- a/source/themes/custom/crescenttool/styles/libraries/view/related-products.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/view/related-products.scss
@@ -59,9 +59,9 @@
       }
 
       .view-related-products-slider__button {
-        background-color: $primary-orange;
+        background-color: $primary-red;
         background-size: rem(10px) rem(16px);
-        border: 1px solid $primary-orange;
+        border: 1px solid $primary-red;
         height: rem(48px);
         width: rem(48px);
         margin: 0;
@@ -70,7 +70,7 @@
 
         &:hover {
           background-color: $color-black;
-          border-color: $primary-orange;
+          border-color: $primary-red;
         }
 
         &.view-related-products-slider__button-prev {
@@ -122,11 +122,11 @@
       width: 100%;
 
       .view-related-products-slider__button {
-        background-color: $primary-orange;
+        background-color: $primary-red;
         background-position: center;
         background-repeat: no-repeat;
         background-size: rem(10px) rem(16px);
-        border: 1px solid $primary-orange;
+        border: 1px solid $primary-red;
         display: none;
         height: rem(48px);
         width: rem(48px);
@@ -160,11 +160,11 @@
 
         .swiper-pagination-bullet {
           background: transparent;
-          border-color: $primary-orange;
+          border-color: $primary-red;
         }
 
         .swiper-pagination-bullet-active {
-          background: $primary-orange;
+          background: $primary-red;
         }
       }
     }
