Updated Red color comment

--- a/source/themes/custom/crescenttool/styles/abstracts/variables/_colors.scss
+++ b/source/themes/custom/crescenttool/styles/abstracts/variables/_colors.scss
@@ -13,7 +13,7 @@ $color-black: #000000;
 $color-blue: #0080FF;
 $color-dark-blue: #0055A9;
 
-// Primary - Red
+// Primary - Rawhide Red
 $primary-red: #CA3604;
 $primary-dark: #A02A03;
 $primary-dark2: #8C2503;
