Changed logo, updated header and logo variable names, Changed navbar and nav link colors, removed unused css from GW

--- a/source/themes/custom/crescenttool/styles/libraries/node/full--product.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/full--product.scss
@@ -248,7 +248,7 @@ $tabs-border-width-active: rem(5px);
             line-height: 1;
 
             svg {
-              height: $header-logo-performance-height-large;
+              height: $header-logo-height;
               vertical-align: middle;
 
               @include media('<=lg-plus') {
@@ -448,7 +448,7 @@ $tabs-border-width-active: rem(5px);
         line-height: 1;
 
         svg {
-          height: $header-logo-performance-height-large;
+          height: $header-logo-height;
           vertical-align: middle;
 
           @include media('<=lg-plus') {
