--- a/source/themes/custom/crescenttool/styles/abstracts/variables/_header.scss
+++ b/source/themes/custom/crescenttool/styles/abstracts/variables/_header.scss
@@ -5,10 +5,9 @@
 
 $header-padding: 1.5rem;
 $header-padding-mobile: 1.5rem;
-$header-logo-height: 1.25rem;
-$header-logo-performance-height-large: 1.75rem;
+$header-logo-height: 2rem;
 $header-logo-height-mobile: 1.25rem;
 
-$header-height-large: $header-padding + $header-padding + $header-logo-height +  $header-logo-performance-height-large;
+$header-height-large: $header-padding + $header-padding + $header-logo-height;
 $header-height: $header-padding + $header-padding + $header-logo-height;
 $header-height-mobile: $header-padding-mobile + $header-padding-mobile + $header-logo-height-mobile;
