--- a/source/themes/custom/crescenttool/styles/abstracts/variables/_header.scss
+++ b/source/themes/custom/crescenttool/styles/abstracts/variables/_header.scss
@@ -8,6 +8,6 @@ $header-padding-mobile: 1.5rem;
 $header-logo-height: 2rem;
 $header-logo-height-mobile: 1.25rem;
 
-$header-height-large: $header-padding + $header-padding + $header-logo-height;
+$header-height-small: $header-padding + $header-logo-height;
 $header-height: $header-padding + $header-padding + $header-logo-height;
 $header-height-mobile: $header-padding-mobile + $header-padding-mobile + $header-logo-height-mobile;
