--- a/source/themes/custom/crescenttool/styles/libraries/region/header.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/region/header.scss
@@ -106,7 +106,7 @@ $mobile-menu-item-button-height: 7rem;
 
       background: 0;
       border: 0;
-      color: $black;
+      color: $white;
       font-weight: $fw-bold;
       line-height: 1;
       padding: 1.5rem;
@@ -499,12 +499,7 @@ $mobile-menu-item-button-height: 7rem;
         }
 
         &.menu-item--in-active-trail {
-          background-color: $black;
-
-          &::after,
-          .menu-item__link--depth-0 {
-            color: $white;
-          }
+          box-shadow: 0 -5px 0 0 $white inset;
 
           .menu-item__link--depth-0  {
             position: relative;
@@ -513,41 +508,41 @@ $mobile-menu-item-button-height: 7rem;
             height: 100%;
             justify-content: center;
             align-self: center;
-            background-color: $black;
+            //background-color: $black;
 
-            &::before,
-            &::after {
-              content: '';
-              background-color: $black;
-              position: absolute;
-              top: 0;
-              width: rem(30px);
-              height: 100%;
-              z-index: -1;
-              transform: skew(-14deg);
-            }
-
-            &::before {
-              left: rem(-15px);
-            }
-
-            &::after {
-              right: rem(-35px);
-            }
+            //&::before,
+            //&::after {
+            //  content: '';
+            //  background-color: $black;
+            //  position: absolute;
+            //  top: 0;
+            //  width: rem(30px);
+            //  height: 100%;
+            //  z-index: -1;
+            //  transform: skew(-14deg);
+            //}
+            //
+            //&::before {
+            //  left: rem(-15px);
+            //}
+            //
+            //&::after {
+            //  right: rem(-35px);
+            //}
 
             @include media('<=xl') {
-              &::before,
-              &::after {
-                width: rem(20px);
-              }
-
-              &::before {
-                left: rem(-10px);
-              }
-
-              &::after {
-                right: rem(-28px);
-              }
+              //&::before,
+              //&::after {
+              //  width: rem(20px);
+              //}
+              //
+              //&::before {
+              //  left: rem(-10px);
+              //}
+              //
+              //&::after {
+              //  right: rem(-28px);
+              //}
             }
           }
         }
