--- a/source/themes/custom/crescenttool/styles/abstracts/mixins/_links.scss
+++ b/source/themes/custom/crescenttool/styles/abstracts/mixins/_links.scss
@@ -5,7 +5,7 @@
 // === link === //
 // @include link-base();
 // Options(s):
-// • $style(value = dark | light) - default = dark - What version of link we should use.
+// • $style(value = dark | light | red) - default = dark - What version of link we should use.
 //
 // @include link-underline();
 // Option(s):
@@ -13,20 +13,27 @@
 //
 // @include link();
 // Option(s):
-// • $style(value = base | dark | light) - default = base - The version of link we should use. base is used by default, Dark can be used to force the styles to be redeclared.
+// • $style(value = base | dark | light | red) - default = base - The version of link we should use. base is used by default, Dark can be used to force the styles to be redeclared.
 // • $underline(value = null | none | hover | full) - default = null - Whether the underline version should be declared, and if so, which version.
 // -----------------------------------------------------------------------------
 
 
 @mixin link-base ($style: dark) {
-  $color: $secondary-black;
+  $color: $secondary-light;
   $hover-color: $secondary-black;
   $hover-weight: null;
 
   // Light overrides.
   @if $style == light {
-    $color: $secondary-light;
-    $hover-color: $secondary-light;
+    $color: $white;
+    $hover-color: $primary-red;
+    $hover-weight: $fw-bold;
+  }
+
+  // Red overrides.
+  @if $style == red {
+    $color: $primary-red;
+    $hover-color: $primary-dark;
     $hover-weight: $fw-bold;
   }
 
