--- a/docroot/themes/custom/gearwrench/templates/node/node--product-listing--full.html.twig
+++ b/docroot/themes/custom/gearwrench/templates/node/node--product-listing--full.html.twig
@@ -84,8 +84,10 @@
 
   <div{{ content_attributes }}>
     {{ content }}
-    {{ filters }}
-    {{ view }}
+    <div class="product-listing-view-section">
+      {{ filters }}
+      {{ view }}
+    </div>
   </div>
 
   {% if display_submitted %}
