--- a/source/themes/custom/crescenttool/styles/libraries/node/full.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/node/full.scss
@@ -15,10 +15,10 @@
  */
 .node--view-mode-full .node__content {
   & > .paragraph-component {
-    margin-top: $gap-vertical-mid;
+    margin-top: $gap-vertical-md;
 
     @include media('>=md') {
-      margin-top: $gap-vertical-md;
+      margin-top: $gap-vertical-md-plus;
     }
   }
 
