--- a/source/themes/custom/crescenttool/styles/libraries/paragraph/full--pullquote.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/paragraph/full--pullquote.scss
@@ -29,12 +29,12 @@
 
   .component-pullquote__content {
     text-align: center;
-    padding-top: $gap-vertical-md;
+    padding-top: $gap-vertical-md-plus;
   }
 
   .component-pullquote__footer {
     font-size: 0.75rem;
-    padding-bottom: $gap-vertical-md;
+    padding-bottom: $gap-vertical-md-plus;
     text-align: right;
 
     .field--name-field-attribution {
