--- a/source/themes/custom/crescenttool/styles/abstracts/variables/_layout.scss
+++ b/source/themes/custom/crescenttool/styles/abstracts/variables/_layout.scss
@@ -15,8 +15,8 @@ $grid-columns: 12 !default;
 $gap-vertical-xsm: 1.5rem !default;
 $gap-vertical-sm: 2.5rem !default;
 $gap-vertical-sm-plus: rem(60px) !default;
-$gap-vertical-mid: 4.5rem !default;
-$gap-vertical-md: 6rem !default;
+$gap-vertical-md: 4.5rem !default;
+$gap-vertical-md-plus: 6rem !default;
 $gap-vertical-lg: 7.5rem !default;
 $gap-vertical-xl: 9.375rem !default;
 
@@ -25,7 +25,7 @@ $gap-vertical-xl: 9.375rem !default;
  */
 $gap-horizontal-sm: 1rem !default;
 $gap-horizontal-md: 1.5rem !default;
-$gap-horizontal-mid: 3rem !default;
+$gap-horizontal-md-plus: 3rem !default;
 $gap-horizontal-lg: 5vw !default;
 $gap-horizontal-xl: calc(50vw - (#{$bp-xl} / 2 )) !default;
 $gap-horizontal-max: 80vw !default;
