--- a/source/themes/custom/gearwrench/styles/base/_typography.scss
+++ b/source/themes/custom/gearwrench/styles/base/_typography.scss
@@ -73,7 +73,7 @@ blockquote {
 code {
   background-color: $color-light-grey;
   display: block;
-  margin: $gap-vertical-sm 0 $gap-vertical-md;
+  margin: $gap-vertical-sm 0 $gap-vertical-md-plus;
   padding: 1rem;
   white-space: pre-wrap;
 }
