--- a/source/themes/custom/gearwrench/styles/libraries/paragraph/full--featured-content--layout-masonry.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/paragraph/full--featured-content--layout-masonry.scss
@@ -39,7 +39,7 @@
   }
 
   .component-featured-content__list-item {
-    margin-top: $gap-vertical-md;
+    margin-top: $gap-vertical-md-plus;
 
     @include media('>md') {
       flex: 1 1 45%;
