added footer js with mobile change, changed header css and js breakpoints, changed footer css order, added input  button border radius

--- a/source/themes/custom/crescenttool/styles/abstracts/mixins/_button.scss
+++ b/source/themes/custom/crescenttool/styles/abstracts/mixins/_button.scss
@@ -8,6 +8,7 @@
 @mixin btn-base($style: primary) {
   background-color: $primary-red;
   border: 0;
+  border-radius: rem(40px);
   color: $black;
   display: inline-block;
   font-family: $font-brand;
