--- a/source/themes/custom/crescenttool/styles/base/_inputs.scss
+++ b/source/themes/custom/crescenttool/styles/base/_inputs.scss
@@ -14,7 +14,7 @@ textarea.form-textarea.webform-counter-warning,
 .form-input-file__button {
   background: transparent;
   border: rem(1px) solid $secondary-black;
-  border-radius: 0;
+  border-radius: rem(8px);
   color: $secondary-black;
   max-width: 100%;
   outline: 0 none;
