--- a/source/themes/custom/crescenttool/styles/libraries/region/header.scss
+++ b/source/themes/custom/crescenttool/styles/libraries/region/header.scss
@@ -13,8 +13,8 @@
 /**
  * SASS Variables
  */
-$header-bp-desktop: '>=lg';
-$header-bp-mobile: '<lg';
+$header-bp-desktop: '>=xl';
+$header-bp-mobile: '<xl';
 $header-z-index: 501;
 $mobile-menu-item-button-height: 7rem;
 
@@ -357,6 +357,7 @@ $mobile-menu-item-button-height: 7rem;
         width: 3.25rem;
         position: absolute;
         z-index: -1;
+        box-shadow: 0 -5px 0 0 $white inset;
       }
 
       span {
