Footer js - updated comment, updated button line-height and padding, updated input height, Footer css updated for mobile styling

--- a/source/themes/custom/crescenttool/styles/abstracts/mixins/_button.scss
+++ b/source/themes/custom/crescenttool/styles/abstracts/mixins/_button.scss
@@ -16,15 +16,15 @@
   letter-spacing: 0.03rem;
   line-height: 1;
   text-align: center;
-  padding: 1rem .85rem .85rem;
+  padding: .85rem;
   text-decoration: none;
   text-transform: uppercase;
   transition: $transition-base;
   white-space: nowrap;
 
   @include media('>md') {
-    line-height: 1.625;
-    padding: 1rem 3.5rem .85rem;
+    line-height: 1.2;
+    padding: .85rem 3.5rem;
   }
 
   @if $style == primary {
