Removed akrobat and added inter and industry fonts

--- a/source/themes/custom/crescenttool/styles/abstracts/variables/_font-families.scss
+++ b/source/themes/custom/crescenttool/styles/abstracts/variables/_font-families.scss
@@ -4,10 +4,10 @@
 // -----------------------------------------------------------------------------
 
 // Default: Body font family
-$font-default: 'Aktiv Grotesk', 'Arial', sans-serif !default;
+$font-default: 'Inter', sans-serif !default;
 
 // Brand: Heading font family
-$font-brand: 'Akrobat', 'Arial', sans-serif !default;
+$font-brand: 'Industry', sans-serif !default;
 
 // Mono: Mono spaced font family
 $font-mono: 'Lucida Sans Typewriter', 'Lucida Console', 'monaco', 'Bitstream Vera Sans Mono', monospace !default;
